--- a/front/src/css/CategoryStyle.css
+++ b/front/src/css/CategoryStyle.css
@@ -4,6 +4,7 @@
 .form{
     min-width: 10%;
     max-width: 50%;
+    justify-content: center;
 }
 
 h1{
@@ -24,6 +25,7 @@ h1{
     margin-top: 10px;
 }
 
+
 .submit{
     border-radius: 3px;
     width: 76%;
@@ -43,4 +45,17 @@ h1{
     background-color: aliceblue;
     border:1px solid rgb(37, 64, 151);
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  
+  th,
+  td {
+    padding: 10px;
+    border: 1px solid #ccc;
+    text-align: left;
+  }
 
