--- a/front/src/css/HomeStyle.css
+++ b/front/src/css/HomeStyle.css
@@ -66,6 +66,39 @@ h1{
     width: 100%;
 }
 
+.check {
+    display: flex;
+  }
+
+.submit-finish {
+    margin-left: 10px;
+    border-radius: 3px;
+    width: 76%;
+    height: 30px;
+    font-family: 'Lora', serif;
+    margin-top: 10px;
+    border: none;
+    font-size: 15px;
+    color:aliceblue;
+    background-color: rgb(37, 64, 151);
+}
+
+.submit-finish:hover{
+    transition: 0.5s;
+    font-family: 'Lora', serif;
+    color: rgb(37, 64, 151);
+    background-color: aliceblue;
+    border:1px solid rgb(37, 64, 151);
+}
+
+.compra {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 250px;
+    border-radius: 5px;
+  }
+
 table {
     min-width: 80%;
     max-width: 100%;
