--- a/front/src/css/HomeStyle.css
+++ b/front/src/css/HomeStyle.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 
 
-.form{
+.form {
     width: 50%;
 }
 
-.main{
+.main {
     display: flex;
     max-width: 100%;
     padding: 0 10px;
@@ -14,18 +14,17 @@
 .division {
     height: 600px;
     margin-right: 5px;
-  }
+}
 
-h1{
+h1 {
     color: antiquewhite;
 }
 
-.icon{
+.icon {
     color: antiquewhite;
-    
 }
 
-.inp{
+.inp {
     border-radius: 3px;
     border: 1px solid rgb(37, 64, 151);
     display: block;
@@ -34,7 +33,7 @@ h1{
     margin-top: 10px;
 }
 
-.inp_select{
+.inp_select {
     border-radius: 3px;
     border: 1px solid rgb(37, 64, 151);
     display: block;
@@ -43,7 +42,7 @@ h1{
     margin-top: 10px;
 }
 
-.submit{
+.submit {
     border-radius: 3px;
     width: 76%;
     height: 30px;
@@ -51,24 +50,38 @@ h1{
     margin-top: 10px;
     border: none;
     font-size: 15px;
-    color:aliceblue;
+    color: aliceblue;
     background-color: rgb(37, 64, 151);
 }
 
-.submit:hover{
+.submit:hover {
     transition: 0.5s;
     font-family: 'Lora', serif;
     color: rgb(37, 64, 151);
     background-color: aliceblue;
-    border:1px solid rgb(37, 64, 151);
+    border: 1px solid rgb(37, 64, 151);
 }
-.table{
+
+.table {
     width: 100%;
 }
 
+
+.inp-taxTotal {
+    border-radius: 3px;
+    border: 1px solid rgb(37, 64, 151);
+    display: block;
+    width: 75%;
+    height: 25px;
+}
+
+
+
 .check {
     display: flex;
-  }
+    font-family: 'Lora', serif;
+    color: antiquewhite;
+}
 
 .submit-finish {
     margin-left: 10px;
@@ -79,16 +92,16 @@ h1{
     margin-top: 10px;
     border: none;
     font-size: 15px;
-    color:aliceblue;
+    color: aliceblue;
     background-color: rgb(37, 64, 151);
 }
 
-.submit-finish:hover{
+.submit-finish:hover {
     transition: 0.5s;
     font-family: 'Lora', serif;
     color: rgb(37, 64, 151);
     background-color: aliceblue;
-    border:1px solid rgb(37, 64, 151);
+    border: 1px solid rgb(37, 64, 151);
 }
 
 .compra {
@@ -97,19 +110,18 @@ h1{
     right: 20px;
     width: 250px;
     border-radius: 5px;
-  }
+}
 
 table {
     min-width: 80%;
     max-width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
-  }
-  
-  th,
-  td {
+}
+
+th,
+td {
     padding: 10px;
     border: 1px solid #ccc;
     text-align: left;
-  }
-
+}
